ole: only read amount needed from block

Some OLE files are not multiple of block size, and may file to read
the last block when its size is smaller.

https://bugzilla.gnome.org/show_bug.cgi?id=690524